--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Atividades</title>
     <link rel="stylesheet"  href="./public/css/style.css">
-    <script src="./script.js" defer></script>
 </head>
 <body>
     <main>
@@ -24,7 +23,7 @@
                 <a href="">«</a>
                 <a href="">1</a>
                 <a href="./views/carta.html">2</a>
-                <a href="">3</a>
+                <a href="./views/texto.html">3</a>
                 <a href="">»</a>
             </ul>
         </nav>
